--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,15 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
+            android:name=".BottomSheet"
+            android:exported="false"
+            android:theme="@style/Theme.Design.Light.NoActionBar"
+            />
+
+        <activity
             android:name=".BottomNavigation"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
             android:name=".AlertDialogClass"
             android:exported="false" />
