--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
+            android:name=".RecylerActivity"
+            android:exported="false" />
+        <activity
             android:name=".BottomSheet"
             android:exported="false"
-            android:theme="@style/Theme.Design.Light.NoActionBar"
-            />
-
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
             android:name=".BottomNavigation"
             android:exported="false"
